--- a/Webcss/Webcss.html
+++ b/Webcss/Webcss.html
@@ -2,15 +2,7 @@
 
     <head>
 
-        <title>
-
-
-        </title>
-
-        <style>
-
-        </style>
-
+        <title> </title>
 
 
 
@@ -22,7 +14,7 @@
 
 
 
-
+        <p style="color:red;">lol</p>
 
 
 
