--- a/maskjavascript/practice.html
+++ b/maskjavascript/practice.html
@@ -6,14 +6,14 @@
 
 </head>
 
-
+<p id ="text">Hello World!</p>
 
 
 
 <body>
 <script type="text/javascript">
 
-    alert("Page is loaded")
+    document.getElementById("text").innerHTML ="LOL"
 </script>
 
 
